Update fields name to cammelCase
