# central/api/models.py
@@ -1,6 +1,6 @@
 # generated by datamodel-codegen:
 #   filename:  openapi.yaml
-#   timestamp: 2024-02-04T22:01:54+00:00
+#   timestamp: 2024-02-06T19:53:04+00:00
 
 from __future__ import annotations
 
@@ -25,7 +25,7 @@ class NotifDeliverySvc(Enum):
 
 class NotifSubscription(BaseModel):
     id: Optional[UUID] = Field(None, description='The UUID4 of the subscription.')
-    notif_delivery_svc: NotifDeliverySvc = Field(
+    notifDeliverySvc: NotifDeliverySvc = Field(
         ..., description='Name of service that will receive notifications.'
     )
     password: str = Field(
